--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 authors = ["José Manuel Muñoz Fuentes <jmlosvillares@correo.ugr.es>"]
 
 [dependencies]
-itertools = "0.7.7"
+itertools = "0.7.8"
 ordered-float = "0.5.0"
-rand = "0.4"
+rand = "0.4.2"
 time = "*"
 clap = "2.31.2"
-byteorder = "1.2.1"
+byteorder = "1.2.2"
 
 [profile.release]
 lto = true
@@ -17,3 +17,7 @@ lto = true
 [[bin]]
 name = "practica1"
 path = "src/practica1.rs"
+
+[[bin]]
+name = "practica2"
+path = "src/practica2.rs"
